--- a/app/src/main/res/layout/activity_home_aluno_ind_view.xml
+++ b/app/src/main/res/layout/activity_home_aluno_ind_view.xml
@@ -25,12 +25,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:scrollIndicators="left"
         app:layout_constraintBottom_toBottomOf="@+id/fragment_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/btmenu"
-        android:background="@color/white"
-        android:scrollIndicators="left"/>
+        app:menu="@menu/btmenu"/>
 
 </RelativeLayout>
