--- a/app/src/main/res/layout/activity_assunto_quiz.xml
+++ b/app/src/main/res/layout/activity_assunto_quiz.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/azulterc"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeAlunoInd">
+    tools:context=".AssuntoQuiz">
 
+    <include
+        layout="@layout/appbarprin">
+
+    </include>
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textColor="@color/azulsec"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:text="Escolha o assunto " />
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -181,5 +198,4 @@
 
     </TableLayout>
 
-
-</FrameLayout>
+</LinearLayout>
