--- a/app/src/main/res/layout/activity_editar_dados_view.xml
+++ b/app/src/main/res/layout/activity_editar_dados_view.xml
@@ -6,67 +6,138 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/azulterc"
     tools:context=".EditarDadosView">
 
     <include
         layout="@layout/appbarprin"/>
 
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/aluno_tipo" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/area" />
+        android:layout_gravity="center_horizontal">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_perfil"
+            app:civ_border_width="4dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_person"
+            app:civ_border_color="@color/azulpri"
+            android:layout_width="200dp"
+            android:layout_height="200dp"/>
+
+
+        <ImageButton
+            android:id="@+id/imageView14"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/img_perfil"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/bt_editar" />
+
+    </RelativeLayout>
     <LinearLayout
+        android:background="@drawable/container"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="20dp">
 
-
-        <EditText
-            android:id="@+id/editTextTextPersonName"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-          android:hint="Nome:" />
+            android:hint="Nome:"
+            android:background="@color/white"
+            app:endIconDrawable="@drawable/edit_aazul"
+            app:endIconTint="@color/azulsec"
+            app:endIconMode="custom"
 
-        <EditText
-            android:id="@+id/editTextTextPersonName2"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextField2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Sobrenome" />
+            android:background="@color/white"
+            app:endIconDrawable="@drawable/edit_aazul"
+            app:endIconTint="@color/azulsec"
+            app:endIconMode="custom"
+            android:hint="Sobrenome:"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextField3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:hint="Email:"
-            android:inputType="textEmailAddress" />
+            android:background="@color/white"
+            app:endIconDrawable="@drawable/gmaillogo"
+            app:endIconTint="@color/azulsec"
+            app:endIconMode="custom"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        <EditText
-            android:id="@+id/editTextTextPersonName3"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/outlinedTextField4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Area:" />
+            android:hint="Area:"
+            android:background="@color/white"
+            app:endIconDrawable="@drawable/area"
+            app:endIconTint="@color/azulsec"
+            app:endIconMode="custom"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/button6"
+            android:backgroundTintMode="add"
+            android:background="@drawable/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/rosa"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
             android:text="Salvar" />
     </LinearLayout>
+
 
 </LinearLayout>
