--- a/app/src/main/res/layout/activity_home_aluno_acom_view.xml
+++ b/app/src/main/res/layout/activity_home_aluno_acom_view.xml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backsenha"
     android:orientation="vertical"
     tools:context=".HomeAlunoAcomView">
+
 
     <include
         layout="@layout/appbarprin"
         />
 
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Salas" />
+
     <ImageButton
-        android:id="@+id/bt_dados"
-        android:layout_margin="30dp"
+
+        android:id="@+id/bt_EntrarSala"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/bt_editar" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/aluno_tipo" />
+        android:layout_margin="10dp"
 
-    <TextView
-        android:id="@+id/textView17"
+        tools:itemCount="5"
+        tools:listitem="@layout/card_view_design" />
+
+    <ImageButton
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:id="@+id/imageButton3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Salas" />
-
-    <Button
-        android:id="@+id/bt_entrarsala"
-        android:layout_margin="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="Entrar em uma sala" />
-
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/btmais" />
 
 </LinearLayout>
