--- a/app/src/main/res/layout/fragment_perfil_alu_ind.xml
+++ b/app/src/main/res/layout/fragment_perfil_alu_ind.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/azulterc"
     tools:context=".PerfilAluInd">
 
     <LinearLayout
@@ -12,31 +13,38 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_gravity="center"
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="4dp"
             android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/aluno_tipo"
-            tools:src="@tools:sample/avatars" />
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_person"
+            app:civ_border_color="#FF000000"
+            android:layout_width="200dp"
+            android:layout_height="200dp"/>
 
         <TextView
             android:id="@+id/txt_nomecomp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:textColor="@color/black"
             android:layout_marginTop="20dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text=" " />
 
         <TextView
             android:id="@+id/txt_area"
             android:textAlignment="center"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_marginTop="20dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/container"
+            android:textColor="@color/azulpri"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:textStyle="bold"
             android:text=" " />
 
         <TextView
@@ -44,45 +52,65 @@
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:text=" " />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:orientation="vertical">
             <Button
                 android:id="@+id/bt_ireditarperfil"
                 android:layout_width="match_parent"
+                android:textAlignment="viewStart"
                 android:layout_marginTop="20dp"
+                android:drawableLeft="@drawable/edit_azul"
+                android:backgroundTint="@color/white"
                 android:layout_height="wrap_content"
                 android:text="Editar perfil" />
 
             <Button
                 android:id="@+id/bt_redefinirsenha"
                 android:layout_width="match_parent"
+                android:backgroundTint="@color/white"
                 android:layout_height="wrap_content"
+                android:textAlignment="viewStart"
+                android:drawableLeft="@drawable/esqueceu_azul"
                 android:text="Trocar senha" />
 
             <Button
                 android:id="@+id/bt_irsaibamais"
                 android:layout_width="match_parent"
+                android:backgroundTint="@color/white"
+                android:textAlignment="viewStart"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/saibamais_azul"
                 android:text="Saiba mais" />
 
             <Button
                 android:id="@+id/bt_sairconta"
                 android:layout_width="match_parent"
+                android:textAlignment="viewStart"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:drawableLeft="@drawable/logout_azul"
                 android:text=" Sair da conta " />
 
             <Button
                 android:id="@+id/bt_excluirconta"
                 android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:textAlignment="viewStart"
+                android:backgroundTint="@color/white"
                 android:layout_height="wrap_content"
-                android:text="Excluir conta " />
+                android:drawableLeft="@drawable/bt_sairrosa"
+                android:text="Excluir conta "
+                />
 
         </LinearLayout>
 
