--- a/app/src/main/res/layout/activity_recuperar_senha_view.xml
+++ b/app/src/main/res/layout/activity_recuperar_senha_view.xml
@@ -38,7 +38,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/outlinedTextField"
+            android:id="@+id/edt_Emailrep"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email:"
